--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,10 @@ h1 {
   max-width: 40em;
 }
 
+.hero {
+  z-index: -1000;
+}
+
 .embed-gord-head {
   padding-top: 135%;
 }
